--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
+    "deepmerge": "^4.2.2",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
